--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "next-i18next": "^13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-compare": "^3.2.0",
