--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "localforage": "^1.10.0",
     "next": "13.0.6",
     "next-i18next": "^13.0.0",
+    "next-intercept-stdout": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-compare": "^3.2.0",
