--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-compare": "^3.2.0",
+    "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
     "typescript": "4.9.3"
   }
