--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "next-i18next": "^13.0.0",
     "next-intercept-stdout": "^1.0.1",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-fast-compare": "^3.2.0",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.4"
   }
 }
