--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
+    "i18next": "^22.4.1",
     "localforage": "^1.10.0",
     "next": "13.0.6",
     "next-i18next": "^13.0.0",
@@ -24,6 +25,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-fast-compare": "^3.2.0",
+    "react-i18next": "^12.1.1",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
     "typescript": "4.9.3"
