--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.6",
+    "eslint-config-next": "^12.0.4",
     "i18next": "^22.4.1",
     "localforage": "^1.10.0",
     "next": "13.0.6",
