--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-fast-compare": "^3.2.0",
     "react-i18next": "^12.1.1",
+    "react-textarea-autosize": "^8.4.0",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
     "typescript": "4.9.3"
